配置 pymacs （不用 pdee 中的 pymacs.el）
pdee 中的 pymacs.el 与 pymacs 版本匹配不好有错误
错误提示 "Pymacs helper did not start within 30 seconds"

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,8 @@ filesets-cache.el
 /site-lisp/jedi/*
 !/site-lisp/jedi/*.el
 /site-lisp/pdee/
+/site-lisp/pdee-master/
+/site-lisp/Pymacs/
 /site-lisp/pylookup/pylookup.db
 /site-lisp/python-mode.el*
 /site-lisp/evernote-mode
