将 /site-lisp/ 下 *.el 添加到 git 版本管理

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,30 @@
 !/.gitignore
 
+*.elc
+*_flymake.el
+*.log
+.*.lock
+\#*
+*~
+*.swp
+*.tar*
+*.gz
+*.zip
+*.bak
+
+*.bak/
+
 .wg-file.el
 /url/cache
 /.emacs.desktop
 /auto-save-list
 /.session
 /custom.el
-*.elc
 CVS
 .svn
-*_flymake.el
-*~
-*.log
 .yas-compiled-snippets.el
 .bookmarks.el
 .cvsignore
-.*.lock
 /tramp
 /TODO
 /anything-c-adaptive-history
@@ -23,12 +32,9 @@ CVS
 cookies
 /newsticker
 /ac-comphist.dat
-\#*
 /elpa
 eshell/
 semanticdb/
-*.swp
-*~
 abbrev_defs
 /swank
 /swank
@@ -41,28 +47,29 @@ GRTAGS
 tutorial/
 /var
 org-clock-save.el
-.\#*
 emms/
 projectile-bookmarks.eld
 history
-*.bak
 /cedet-bzr/
 session.*
 /debug-init.el
 /tmp/
 .cask/
 /.python-environments/
-*.tar*
-*.gz
-*.zip
 filesets-cache.el
+/my-snippets/
 
 /site-lisp/jedi/*
 !/site-lisp/jedi/*.el
-/site-lisp/pdee/
-/site-lisp/pdee-master/
-/site-lisp/Pymacs/
-/site-lisp/pylookup/pylookup.db
-/site-lisp/python-mode.el*
-/site-lisp/evernote-mode
-/site-lisp/evernote-mode/*.el
+/site-lisp/pdee/*
+!/site-lisp/pdee/*.el
+/site-lisp/pdee-master/*
+!/site-lisp/pdee-master/*.el
+/site-lisp/Pymacs/*
+!/site-lisp/Pymacs/*.el
+/site-lisp/pylookup/*
+!/site-lisp/pylookup/*.el
+/site-lisp/python-mode.el*/*
+!/site-lisp/python-mode.el*/*.el
+/site-lisp/evernote-mode/*
+!/site-lisp/evernote-mode/*.el
